--- a/kr_data-visualize.qmd
+++ b/kr_data-visualize.qmd
@@ -609,7 +609,7 @@ ggplot(penguins, aes(x = body_mass_g)) +
     Experiment with different binwidths.
     What binwidth reveals the most interesting patterns?
 
-## Visualizing relationships
+## 관계성 시각화하기
 
 To visualize a relationship we need to have at least two variables mapped to aesthetics of a plot.
 In the following sections you will learn about commonly used plots for visualizing relationships between two or more variables and the geoms used for creating them.
@@ -725,7 +725,7 @@ ggplot(penguins, aes(x = island, fill = species)) +
 
 In creating these bar charts, we map the variable that will be separated into bars to the `x` aesthetic, and the variable that will change the colors inside the bars to the `fill` aesthetic.
 
-### Two numerical variables
+### 두 개의 수치형 변수
 
 So far you've learned about scatterplots (created with `geom_point()`) and smooth curves (created with `geom_smooth()`) for visualizing the relationship between two numerical variables.
 A scatterplot is probably the most commonly used plot for visualizing the relationship between two numerical variables.
@@ -762,7 +762,7 @@ ggplot(penguins, aes(x = flipper_length_mm, y = body_mass_g)) +
 ```
 
 However adding too many aesthetic mappings to a plot makes it cluttered and difficult to make sense of.
-Another way, which is particularly useful for categorical variables, is to split your plot into **facets**, subplots that each display one subset of the data.
+Another way, which is particularly useful for categorical variables, is to split your plot into **facets** , subplots that each display one subset of the data.
 
 To facet your plot by a single variable, use `facet_wrap()`.
 The first argument of `facet_wrap()` is a formula[^kr_data-visualize-3], which you create with `~` followed by a variable name.
@@ -885,21 +885,27 @@ You will learn more about Quarto in @sec-quarto.
 2.  What do you need to change in the code above to save the plot as a PDF instead of a PNG?
     How could you find out what types of image files would work in `ggsave()`?
 
-## Common problems
+## 자주 일어나는 문제들
 
 As you start to run R code, you're likely to run into problems.
 Don't worry --- it happens to everyone.
 We have all been writing R code for years, but every day we still write code that doesn't work on the first try!
+R 코드를 실행하기 시작하면서 문제들에 봉착할 것이다.
+걱정하지 말라.
+모든 사람에게 일어나는 일이다.
+저자들은 R 코드를 수년간 작성해왔지만, 작성한 코드가 바로 실행되지 않는 일이 매일같이 발생한다!
 
-Start by carefully comparing the code that you're running to the code in the book.
-R is extremely picky, and a misplaced character can make all the difference.
-Make sure that every `(` is matched with a `)` and every `"` is paired with another `"`.
-Sometimes you'll run the code and nothing happens.
-Check the left-hand of your console: if it's a `+`, it means that R doesn't think you've typed a complete expression and it's waiting for you to finish it.
-In this case, it's usually easy to start from scratch again by pressing ESCAPE to abort processing the current command.
+우선 실행 중인 코드와 이 책의 코드를 차분하게 비교하라.
+R 은 극도로 까다롭고 문자를 잘못 위치시키면 완전히 다르게 될 수 있다.
+`(` 가 모두 `)` 와 짝을 이루고, `"` 가 모두 다른 `"` 와 짝을 이루는지 확인하라.
+때론 코드를 실행해도 아무 일도 일어나지 않을 수 있다.
+콘솔의 좌측을 체크하라.
+즉, `+` 라면 R 은 여러분이 표현문을 완성한 것으로 생각하지 않고 마저 끝내기를 기다린다는 의미이다.
+보통은 이런 경우 esc 키를 눌러서 현재 명령처리를 중단하고 처음부터 다시 시작하는 게 쉽게 처리하는 방법이다.
 
-One common problem when creating ggplot2 graphics is to put the `+` in the wrong place: it has to come at the end of the line, not the start.
-In other words, make sure you haven't accidentally written code like this:
+ggplot2 그래프를 생성할 때 자주 일어나는 일은 `+` 를 잘못된 곳에 입력하는 것 이다.
+라인의 시작이 아니라 마지막에 와야 한다.
+다른 말로 하면, 코드를 다음과 같이 실수로 작성하지 않았는지 확인하라.
 
 ```{r}
 #| eval: false
@@ -908,16 +914,19 @@ ggplot(data = mpg)
 + geom_point(mapping = aes(x = displ, y = hwy))
 ```
 
-If you're still stuck, try the help.
-You can get help about any R function by running `?function_name` in the console, or highlighting the function name and pressing F1 in RStudio.
-Don't worry if the help doesn't seem that helpful - instead skip down to the examples and look for code that matches what you're trying to do.
+여전히 해결을 못했다면 도움말을 열어보라.
+모든 R 함수는 도움말이 있는데, 콘솔에서 `?function_name` 을 실행하거나 RStudio 에서 함수 이름을 선택하고, F1 키를 누르면 된다.
+도움말이 도움되지 않아도 걱정하지 말라.
+즉, 도움말 대신 예제로 넘어가서 실행하려고 하는 코드에 해당하는 것을 찾아보자.
 
-If that doesn't help, carefully read the error message.
-Sometimes the answer will be buried there!
-But when you're new to R, even if the answer is in the error message, you might not yet know how to understand it.
-Another great tool is Google: try googling the error message, as it's likely someone else has had the same problem, and has gotten help online.
+도움이 되지 않는다면 차분하게 에러메시지를 읽어보자.
+답이 그곳에 있는 경우가 많다!
+그러나 R 이 처음이라면 답이 에러메시지에 있어도, 이해하지 못할 것이다.
+다른 훌륭한 도구는 구글이다.
+오류 메시지로 구글에서 검색해보라.
+같은 문제에 빠졌다가 온라인에서 도움을 얻은 사람들이 있을 수 있다.
 
-## Summary
+## 요약
 
 In this chapter, you've learned the basics of data visualization with ggplot2.
 We started with the basic idea that underpins ggplot2: a visualization is a mapping from variables in your data to aesthetic properties like position, color, size and shape.
